# calendar-agent

./: .aiexclude  agent.py  pyproject.toml
agent/: agent.py
app/: agent.py  main.py
app/ui/: streamlit.py
app/utils/: __init__.py  google_calendar_utils.py
mcp/: server.py
utils/: google_calendar_utils.py
