[project]
name = "mcp-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "google-api-python-client>=2.187.0",
    "google-auth-httplib2>=0.3.0",
    "google-auth-oauthlib>=1.2.3",
    "javascript>=1!1.2.6",
    "mcp[cli]>=1.9.3",
    "openai>=2.14.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.5",
    "streamlit>=1.52.2",
    "streamlit-javascript>=0.1.5",
    "uvicorn>=0.34.3",
]
